--- a/examples/config.toml
+++ b/examples/config.toml
@@ -6,3 +6,4 @@
 # When false (default): System/DE handles media keys
 # When true: akeyshually handles media keys using media-keys.toml
 enable_media_keys = false
+modifier_release_delay = 50
