--- a/internal/config/defaults/shortcuts.toml
+++ b/internal/config/defaults/shortcuts.toml
@@ -1,37 +1,45 @@
-# akeyshually shortcuts
-# Location: ~/.config/akeyshually/shortcuts.toml
 
-[shortcuts]
-# Modifier tap (requires trigger_on = "release")
+[shortcuts] # ~/.config/akeyshually/shortcuts.toml
+"super+k" = "edit_config"
+
+#-[LAUNCHERS]--------------------------------
+
 "super" = "rofi"
-
-# Applications
-"super+return" = "kitty"
 "super+b" = "browser"
-"super+shift+b" = "browser_private"
-"super+e" = "dolphin"
-"super+w" = "flatpak run com.rtosta.zapzap"
-"ctrl+alt+t" = "kitty"
-
-# Utilities
+"super+shift+b" = "browser2"
+"super+return" = "kitty"
+"super+f" = "dolphin"
 "super+x" = "xkill"
+"super+e" = "email"
+#"ctrl+alt+t" = "kitty"
 "super+v" = "copyq toggle"
-"super+k" = "kitty micro ~/.config/akeyshually/shortcuts.toml"
+"super+w" = "whatsapp"
+"shift+super+n" = "notetaker"
 
-# Screenshots
-"print" = "screenshot --quick"
-"shift+print" = "screenshot --save"
-"ctrl+print" = "xdg-open ~/Pictures/temp.png"
+#-[UTILS]------------------------------------
 
-# Custom scripts
-"f9" = "custom-tool toggle"
-"shift+super+n" = "bash -c \"source ~/.bashrc && notetaker\""
+"print" = "prtscr"
+"super+p" = "prtscr"
+"shift+print" = "/home/user/Workspace/tools/bin/screenshot-save"
+"ctrl+print" = "bash -c \"xdg-open ~/Media/Pictures/temp.png\""
+"f9" = "yap"
+"ctrl+mute" = "mute_mic"
 
-[commands]
-# Shortcuts can reference these by name or use literal commands
-browser = "brave-browser --user-data-dir=~/.config/BraveSoftware/default"
-browser_private = "brave-browser --user-data-dir=~/.config/BraveSoftware/private --incognito"
+
+"ctrl+shift+alt+h"="xdotool mousemove_relative 2 0"
+
+
+
+[commands]#----------------------------------
+
+edit_config = "kitty micro ~/.config/akeyshually/shortcuts.toml"
+
+browser = "brave-browser --user-data-dir=/home/user/.config/BraveSoftware/1"
+browser2 = "brave-browser --user-data-dir=/home/user/.config/BraveSoftware/2"
+dmenu = "bash -c \"compgen -c | dmenu | sh\""
 rofi = "~/.config/rofi/scripts/launcher_t7"
-screenshot = "maim -s | xclip -selection clipboard -t image/png"
-custom-tool = "~/bin/my-script"
-notetaker = "~/.local/bin/notetaker"
+email = "flatpak run org.mozilla.Thunderbird"
+mute_mic = "pactl set-source-mute @DEFAULT_SOURCE@ toggle"
+whatsapp = "flatpak run com.rtosta.zapzap"
+notetaker = "bash -c \"source ~/.bashrc && /home/user/.config/bash/bin/notetaker/notetaker\""
+prtscr = "/home/user/Workspace/tools/bin/screenshot-save --temp"
